--- a/colores/carro.html
+++ b/colores/carro.html
@@ -16,7 +16,7 @@
             <ul class="ayuda">
                 <li><a href="#">Ayuda</a></li>
                 <li><a href="#">Seguimiento de pedidos</a></li>
-                <li id="carroPago"><i class="fa-solid fa-cart-shopping"></i></li>
+                <li id="carroPago"><i class="fa-solid fa-cart-shopping"></i><span id="contador"></span></li>
             </ul>
             </ul>
         </nav>
@@ -41,9 +41,9 @@
             <button   class="agregar-carrito" data-nombre="Producto 3" data-precio="120">Agregar al carrito</button>
         </div>
     </section>
-    <section class="productos" id="carrito-detalle">
-        <i id="close-btn" class="fa-solid fa-xmark"></i>
-        <div id="contenido-cartas">
+    <section class="productos" id="myModal9">
+        <i id="close9" class="fa-solid fa-xmark"></i>
+        <div id="contenidoCartas">
 
         </div>
     </section>
@@ -54,13 +54,13 @@
             <p>Precio: $160</p>
             <button   class="agregar-carrito" data-nombre="Producto 1" data-precio="100">Agregar al carrito</button>
         </div>
-        <div id="carta4" class="producto">
+        <div id="carta5" class="producto">
             <img src="https://w7.pngwing.com/pngs/829/703/png-transparent-adidas-originals-sweatpants-sportswear-adidas-sneakers-adidas-black.png" alt="Producto 2">
             <p>CAMISETA DE BÁSQUET INSPIRADA EN LAS CANCHAS</p>
             <p>Precio: $180</p>
             <button   class="agregar-carrito" data-nombre="Producto 2" data-precio="150">Agregar al carrito</button>
         </div>
-        <div carta5 class="producto">
+        <div id="carta6" class="producto">
             <img src="https://totalsport.es/54708-large_default/adidas-sudadera-essentials-3-stripes-logo-hombre.jpg" alt="Producto 3">
             <p>CAMISETA DE ALGODÓN QUE RINDE HOMENAJE AL BÁSQUET MUNDIAL.</p>
             <p>Precio: $200</p>
@@ -88,6 +88,6 @@
     </section> -->
     
     
-    <script src="/colores/carross.js"></script>
+    <script src="/colores/tiends.js"></script>
 </body>
 </html>
