--- a/colores/colores.html
+++ b/colores/colores.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/colores.css" />
+    <link rel="stylesheet" href="colores.css"/>
     <title>Document</title>
   </head>
   <body>
@@ -29,6 +29,6 @@
     </main>
     
 
-    <script src="/colores.js"></script>
+    <script src="colores.js"></script>
   </body>
 </html>
