--- a/Ejercicios exposicion/grupo3.html
+++ b/Ejercicios exposicion/grupo3.html
@@ -6,14 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p id="miParrafo">Este es un párrafo inicial.</p>
+<button onclick="modificarTexto()">Modificar texto</button>
 
 
+    <section id="section">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, culpa illo! Nostrum iure quibusdam est, animi et iste esse odio officia ad quidem assumenda atque molestias obcaecati voluptatibus debitis aut.
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, odit hic voluptas unde culpa et, dignissimos sapiente eum at cumque nisi quibusdam distinctio amet fuga totam, harum deleniti ab quae?.</p>
 
 
-
-
-
-    <script src="/grupo3.js"></script>
+      </section>
+      <article id="article">
+        
+      </article>
+    <script src="/Ejercicios exposicion/grupo3.js"></script>
 </body>
 </html>
