--- a/Ejercicios exposicion/grupo4.html
+++ b/Ejercicios exposicion/grupo4.html
@@ -6,10 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main id="main">
+        <p>Este es un párrafo inicial.</p>
+      </main>
+      <button onclick="modificarHTML()">Modificar HTML</button>
 
+      <section id="contenedor"></section>
+<button onclick="crearElemento()">Crear Elemento</button>
 
-
-    <script src="/grupo4.js"></script>
+    <script src="/Ejercicios exposicion/grupo4.js"></script>
 </body>
 </html>
