--- a/Ejercicios exposicion/grupo2.html
+++ b/Ejercicios exposicion/grupo2.html
@@ -14,6 +14,6 @@
         }
     </script>
 
-    <script src="/grupo2.js"></script>
+    <script src="/Ejercicios exposicion/grupo2.js"></script>
 </body>
 </html>
