--- a/Ejercicios exposicion/grupo6.html
+++ b/Ejercicios exposicion/grupo6.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src=""></script>
+    <script src="/Ejercicios exposicion/grupo6.js"></script>
 </body>
 </html>
